--eval" as it contains workarounds for the macro expansion buffer size
limit.

Always allow an epoch of 0.
----------------------------------------------------------------------
Sat Mar 10 15:36:46 2007                        Michael Jennings (mej)

Add /proc workaround.
----------------------------------------------------------------------
Sun Mar 11 15:04:13 2007                        Michael Jennings (mej)

Refactored /proc workaround to automatically detect whether or not
/proc is mounted already and act accordingly.
----------------------------------------------------------------------
Thu Mar 15 01:20:45 2007                        Michael Jennings (mej)

Not building a package which doesn't build on the current architecture
isn't a "failure."

Fixed internal RPM version comparison bug.
----------------------------------------------------------------------
Thu Mar 15 02:15:37 2007                        Michael Jennings (mej)

Typo fix.
----------------------------------------------------------------------
Tue May 15 20:48:00 2007                        Michael Jennings (mej)

Add "rpmeval" from Jeff Johnson <n3npq@mac.com> to perform spec file
pre-processing to work around a macro processing bug that has been
fixed upstream for some time but that some distro vendors have been
slow in applying.  See the following bug for more details:
https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=228215
----------------------------------------------------------------------
Wed May 16 15:05:58 2007                        Michael Jennings (mej)

Fix for RHEL4's RPM version from Jason Corley <jason.corley@gmail.com>
and fixed build arch.
----------------------------------------------------------------------
Mon May 21 19:13:04 2007                        Michael Jennings (mej)

Tweaks for rpm 4.4.9, new PHP extension template, reorg of
pkgrepotool.
----------------------------------------------------------------------